compiler/tools/fpp-check/test/tlm_packets/omit_instance_not_defined.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/tlm_packets/omit_instance_not_defined.fpp:6.5
    u.T
    ^
error: cannot find component instance `u` in this scope
